Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98532

CMake - _qmltyperegistration.cpp do not get updated

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.3, 6.3.0 Alpha
    • 6.2.1
    • Build System: CMake
    • None
    • cmake 3.21.3
      ninja 1.10.2
    • Linux/X11, Windows
    • 63b8840380e70c1258f56c67a2ec5edb5bdea53d (qt/qtbase/dev) 147877550b25d8733712c33b326cf2157b76957b (qt/qtbase/6.2)

      If I change classnames with QML_ELEMENT or remove/add QML_ELEMENT *_qmltyperegistration.cpp does not get updated.

      I am not sure if this intended behaviour or not.

       

      Reproduce with the attached example project:

      1. Build it.
      2. Check app_qmltyperegistrations.cpp or plugin/plugin_qmltyperegistrations.cpp
      3. Uncomment QML_ELEMENT in AppType.h or plugin/PluginType.h
      4. configure and/or Build again, *_qmltyperegistrations.cpp do not change
      5. run clean
      6. configure/build
      7. *_qmltyperegistrations.cpp are updated now

       

      PS: The example does not run, could not figure out why. Not important for the issue I hope.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semlanik Alexey Edelev
            Marscho Marscho
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes